Completed the basic function of Login and SignUp button, signup button rechecks password and then goes to SignUp page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Login</button>
 
 	<div id="id01" class="modal">
-		<form class="modal-content animate" action="/action_page.php">
+		<form name="loginForm" class="modal-content animate" action="loginAction.php" method="post">
     
 	    <div class="container">
 	      <label><b>Username</b></label>
@@ -30,22 +30,75 @@
 	      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
 	      <span class="psw">Forgot <a href="#">password?</a></span>
 	    </div>
-	    
+
   		</form>
+	</div>
+
+	<button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Sign Up</button>
+
+	<div id="id02" class="modal">
+	  <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">X</span>
+	  <form name="signUpForm" class="modal-content animate" action="SignUpAction.php" method="post">
+	    <div class="container">
+	      <label><b>Email</b></label>
+	      <input type="text" placeholder="Enter Email" name="email" required>
+
+	      <label><b>Password</b></label>
+	      <input type="password" placeholder="Enter Password" name="password" onkeyup='check();'id="password" required>
+
+	      <label><b>Repeat Password</b></label>
+	      <input type="password" placeholder="Repeat Password" id="confirm_password" onkeyup='check();' required>
+	      <span id='message'></span>
+	      <!-- <input type="checkbox" checked="checked"> Remember me -->
+	      <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
+
+	      <div class="clearfix">
+	        <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancel</button>
+	        <button type="submit" class="signupbtn" id="signup" disabled>Sign Up</button>
+	      </div>
+	    </div>
+	  </form>
 	</div>
 
 
 
 	<script>
-	// Get the modal
-	var modal = document.getElementById('id01');
+	// Get the modal for login
+	var loginModal = document.getElementById('id01');
 
 	// When the user clicks anywhere outside of the modal, close it
 	window.onclick = function(event) {
-	    if (event.target == modal) {
-	        modal.style.display = "none";
+	    if (event.target == loginModal) {
+	        loginModal.style.display = "none";
 	    }
 	}
+
+
+	// Modal for Signup
+	var signUpModal = document.getElementById('id02');
+
+	// When the user clicks anywhere outside of the modal, close it
+	window.onclick = function(event) {
+	    if (event.target == signUpModal) {
+	        signUpModal.style.display = "none";
+	    }
+	}
+
+	var check = function() {
+  	
+  	if (document.getElementById('password').value ==
+    document.getElementById('confirm_password').value) {
+
+    document.getElementById('message').style.color = 'green';
+    document.getElementById('message').innerHTML = 'matching';
+    document.getElementById('signup').disabled = false; //enable the submit button
+  } else {
+    document.getElementById('message').style.color = 'red';
+    document.getElementById('message').innerHTML = 'not matching';
+    document.getElementById('signup').disabled = true; //disable the submit button
+  }
+}
+
 	</script>
 
 </body>
